manifests/honeynet.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: honeynet
