manifests/samba-basic.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: samba-basic
  labels:
    app: samba-basic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: samba-basic
  labels:
    app: samba-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba-basic
  template:
    metadata:
      labels:
        app: samba-basic
      annotations:
        k8s.v1.cni.cncf.io/networks: honeynet/macvlan
    spec:
      hostname: samba
      shareProcessNamespace: true

      volumes:
      - name: samba-home
        persistentVolumeClaim:
          claimName: samba-home
      - name: samba-logs
        persistentVolumeClaim:
          claimName: samba-logs
      - name: samba-config
        configMap:
          name: samba-config
      - name: udhcpc-scripts
        configMap:
          name: udhcpc-scripts
          defaultMode: 0744

      containers:
      - name: smb
        image: servercontainers/samba:latest
        volumeMounts:
        - name: samba-home
          mountPath: /home
        - name: samba-logs
          mountPath: /var/log/samba
        - name: samba-config
          mountPath: /container/config/samba
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add: ["NET_BIND_SERVICE", "NET_BROADCAST", "NET_ADMIN"]

      - name: dhcp
        image: busybox
        command: [
          "udhcpc",
          "-i", "net1", # Interface to use
          "-B", # Request broadcast replies (so everyone sees us)
          "-T", "5", # Pause between packets
          "-R", # Release IP on exit
          "-f", # Run in foreground
          "-a", # Validate offerred address with ARP ping (so everyone sees us)
          "-O", "12", # request Host Name
          "-O", "15", # request Domain Name
          "-O", "42", # request NTP Servers
          "-O", "119", # request Doman Search
          "-O", "120", # request SIP Servers
          "-x", "hostname:samba", # provide option 22
          # "-x", "lease:60", # request short 60-second lease
          "-F", "samba", # Ask server to update DNS mapping 
          "-V", "Microsloth", # Vendor identifier (replacing udhcp version info)
        ]
        volumeMounts:
        - mountPath: "/usr/share/udhcpc"
          name: udhcpc-scripts
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add: ["NET_BIND_SERVICE", "NET_BROADCAST", "NET_ADMIN"]
      
      # - image: jonasped/wsdd
      #   name: wsd
      #   env:
      #   - name: WSDD_ARGS
      #     value: "--interface net1 --hostname SAMBA --workgroup WORKGROUP"
      #   securityContext:
      #     allowPrivilegeEscalation: true
      #     capabilities:
      #       add: ["NET_BIND_SERVICE", "NET_BROADCAST"]
