manifests/samba-honeypot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: samba-honeypot
  labels:
    app: samba-honeypot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: samba-honeypot
  labels:
    app: samba-honeypot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba-honeypot
  template:
    metadata:
      labels:
        app: samba-honeypot
      annotations:
        k8s.v1.cni.cncf.io/networks: honeynet/macvlan
    spec:
      shareProcessNamespace: true
      containers:
        - image: quay.io/samba.org/samba-server:latest
          name: smb
          command: ["samba-container", "run", "smbd"]
          volumeMounts:
          - mountPath: "/share"
            name: samba-sharedir
          - mountPath: "/etc/samba-container"
            name: samba-container-config
          - mountPath: "/var/lib/samba"
            name: samba-state-dir
          - mountPath: "/run/samba/winbindd"
            name: samba-sockets-dir
          securityContext:
            allowPrivilegeEscalation: true

        - image: quay.io/samba.org/samba-server:latest
          name: winbind
          command: ["samba-container", "run", "winbindd"]
          volumeMounts:
          - mountPath: "/share"
            name: samba-sharedir
          - mountPath: "/etc/samba-container"
            name: samba-container-config
          - mountPath: "/var/lib/samba"
            name: samba-state-dir
          - mountPath: "/run/samba/winbindd"
            name: samba-sockets-dir
          securityContext:
            allowPrivilegeEscalation: true

        - image: busybox
          name: dhcp
          command: [
            "udhcpc",
            "-i", "net1", # Interface to use
            "-B", # Request broadcast replies (so everyone sees us)
            "-T", "5", # Pause between packets
            "-R", # Release IP on exit
            "-f", # Run in foreground
            "-a", # Validate offerred address with ARP ping (so everyone sees us)
            "-O", "12", # request Host Name
            "-O", "15", # request Domain Name
            "-O", "42", # request NTP Servers
            "-O", "119", # request Doman Search
            "-O", "120", # request SIP Servers
            "-x", "hostname:sambasrv", # provide option 22
            # "-x", "lease:60", # request short 60-second lease
            "-F", "sambasrv", # Ask server to update DNS mapping for "fileserver"
            "-V", "Microsloth", # Vendor identifier (replacing udhcp version info)
          ]
          volumeMounts:
          - mountPath: "/usr/share/udhcpc"
            name: udhcpc-scripts
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add: ["NET_BIND_SERVICE", "NET_BROADCAST", "NET_ADMIN"]
        
        - image: jonasped/wsdd
          name: wsd
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add: ["NET_BIND_SERVICE", "NET_BROADCAST"]
            
      volumes:
      - configMap:
          name: samba-container-config
        name: samba-container-config
      - emptyDir:
          medium: Memory
        name: samba-sockets-dir
      - emptyDir: {}
        name: samba-state-dir

      - persistentVolumeClaim:
          claimName: samba-pvc
        name: samba-sharedir

      - name: udhcpc-scripts
        configMap:
          name: udhcpc-scripts
          defaultMode: 0744
