manifests/sambacc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: samba-honeypot
---
# The pod itself.
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: samba-dm-example
  name: samba-dm
  namespace: samba-honeypot
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-conf
spec:
  shareProcessNamespace: true
  containers:
    - image: quay.io/samba.org/samba-server:latest
      name: smb
      command:
      - "samba-container"
      - "--debug-delay=1"
      - "run"
      - "smbd"
      ports:
      - containerPort: 445
        hostPort: 455
        protocol: TCP
        name: "smb"
      securityContext:
        allowPrivilegeEscalation: true
      volumeMounts:
      - mountPath: "/share"
        name: samba-sharedir
      - mountPath: "/etc/samba-container"
        name: samba-container-config
      - mountPath: "/var/lib/samba"
        name: samba-state-dir
      - mountPath: "/run/samba/winbindd"
        name: samba-sockets-dir
    - image: quay.io/samba.org/samba-server:latest
      name: winbind
      command:
      - "samba-container"
      - "run"
      - "winbindd"
      securityContext:
        allowPrivilegeEscalation: true
      volumeMounts:
      - mountPath: "/etc/samba-container"
        name: samba-container-config
      - mountPath: "/var/lib/samba"
        name: samba-state-dir
      - mountPath: "/run/samba/winbindd"
        name: samba-sockets-dir
  volumes:
  - configMap:
      name: samba-container-config
    name: samba-container-config
  - emptyDir:
      medium: Memory
    name: samba-sockets-dir
  - emptyDir: {}
    name: samba-state-dir
# Comment out the section below to skip using a PVC for the share
  - persistentVolumeClaim:
      claimName: samba-pvc
    name: samba-sharedir
# Uncomment the section below to use an empty dir for the share
#  - emptyDir:
#      medium: Memory
#    name: samba-sharedir
